--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -271,6 +271,7 @@
 .mypage .progmg.allcare .prog_apply_sec .prog_info .prog_group dd {font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
 .mypage .progmg.allcare .prog_apply_sec .prog_file .prog_file_list {padding: 16px 12px; border: 1px solid #ddd; border-radius: 8px;}
 .mypage .progmg.allcare .prog_apply_sec .prog_file .prog_file_list ul li+li {border-top: 1px solid #f5f5f5;}
+.mypage .progmg.allcare .prog_apply_sec .prog_file .prog_file_list ul li a {width: 100%; height: 100%; display: block;}
 .mypage .progmg.allcare .prog_apply_sec .prog_file .prog_file_list ul li p {position: relative; padding-right: 32px; margin: 12px 0; font-size: 14px; color: var(--col_blue); font-weight: 400; line-height: 24px;  white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 .mypage .progmg.allcare .prog_apply_sec .prog_file .prog_file_list ul li p::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); background: url('../images/mypage/ico16_download2.svg') no-repeat center / contain; width: 16px; height: 16px;}
 .mypage .progmg.allcare .prog_apply_sec .prog_file .prog_file_list ul li:first-child p {margin-top: 0;}
