--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* index링크 모바일 확인용 css (스크롤 안보이기) */
-::-webkit-scrollbar {display: none;}
+/* ::-webkit-scrollbar {display: none;} */
 
 
 
@@ -28,17 +28,18 @@
 .allcare .dimmed_pop {z-index: 299; width: 100%; height: 100%; display: block; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.16);}
 .allcare .dimmed_pop.dsp-none {display: none;}
 
-.allcare .mt80 {margin-top: 80px;}
-.allcare .mt40 {margin-top: 40px;}
-.allcare .mt24 {margin-top: 24px;}
-.allcare .mt16 {margin-top: 16px;}
-.allcare .mb80 {margin-bottom: 80px;}
-.allcare .mb40 {margin-bottom: 40px;}
-.allcare .mb24 {margin-bottom: 24px;}
-.allcare .mb16 {margin-bottom: 16px;}
-.allcare .mb8 {margin-bottom: 8px;}
-.allcare .pb24 {padding-bottom: 24px;}
-.allcare .pt24 {padding-top: 24px;}
+.allcare .mt80 {margin-top: 80px !important;;}
+.allcare .mt40 {margin-top: 40px !important;;}
+.allcare .mt24 {margin-top: 24px !important;;}
+.allcare .mt16 {margin-top: 16px !important;;}
+.allcare .mb80 {margin-bottom: 80px !important;;}
+.allcare .mb40 {margin-bottom: 40px !important;;}
+.allcare .mb24 {margin-bottom: 24px !important;;}
+.allcare .mb16 {margin-bottom: 16px !important;;}
+.allcare .mb8 {margin-bottom: 8px !important;;}
+.allcare .pb24 {padding-bottom: 24px !important;;}
+.allcare .pt24 {padding-top: 24px !important;;}
+.allcare .pt16 {padding-top: 16px !important;}
 .allcare .pad_none {padding: initial !important;}
 .allcare .mag_none {margin: initial !important;}
 
@@ -218,10 +219,12 @@
 
 
 /* 참여신청서 - 조회 (UI_ADHPAbS04) */
+.mypage .progmg.allcare .prog_applysummary .apply_summary_inner .apply_summary_reason {padding-left: 24px; position: relative; font-size: 14px; font-weight: 400; line-height: 24px; color: #e0024b;}
+.mypage .progmg.allcare .prog_applysummary .apply_summary_inner .apply_summary_reason::before {content: ''; width: 16px; height: 16px; position: absolute; left: 0; top: 3px; background: url('../images/mypage/ico16_reply.svg') no-repeat center / contain;}
+
 
 
 /* 참여신청서 - 회수(수정) (UI_ADHPAbS05) */
-
 
 /* [팝업] 운영 대학 검색 팝업 (UI_ADHPAbP06) */
 
@@ -288,12 +291,50 @@
 
 
 /* 참여 프로그램 관리 - 목록 있음 (UI_ADHPAdM02) */
+.mypage .progmg.allcare .full_box.custon_full_box .form_group {background-color: #fff;}
+.mypage .progmg.allcare .full_box.custon_full_box .form_group .form_select {width: 100%; height: 100%; display: flex; align-items: center; padding: 6px 0 6px 14px; letter-spacing: -0.06em;}
+.mypage .progmg.allcare .full_box.custon_full_box .form_group .form_select span {max-width: 88px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-size: 16px; line-height: 26px; color: #555; font-weight: 400; letter-spacing: -0.06em;}
 
 
 /* 참여 프로그램 관리 - 조회 (UI_ADHPAdS03) */
+.mypage .progmg.allcare .prog_view_sec dd span {color: var(--col_blue); font-weight: 600;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_wrap {padding: 24px 0 0; border: 1px solid #ddd; background-color: #f8f8f8; border-radius: 8px; overflow: hidden;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_info {display: flex; flex-direction: column; align-items: center; text-align: center;  }
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_info i {width: 24px; height: 24px; display: block; background: url('../images/mypage/ico24_ui_warning_filled.svg');}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_tit {margin: 4px 0 8px; font-size: 16px; color: #333; font-weight: 600; line-height: 28px;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_tit span {font-size: 16px; color: var(--col_blue); font-weight: 600; line-height: 28px;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_action {border-top: 1px solid #ddd; display: flex; justify-content: center; align-items: center; background-color: #fff; }
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_action button {padding: 10px 0; width: 100%;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_action button span {position: relative; padding-right: 20px; font-size: 14px; color: #333; line-height: 24px; font-weight: 400;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_action button span::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); width: 16px; height: 16px; background: url('../images/mypage/ico16_line_right_filled.svg') no-repeat center / contain;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul {height: 256px; overflow: auto; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; margin: 0 16px 24px; padding: 24px;} 
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul li + li {margin-top: 8px;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul li .apply_summary_status {display: flex;  justify-content: space-between; font-size: 14px;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul li .apply_summary_status p {font-size: 14px; line-height: 24px; color: #555; font-weight: 400;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul li .apply_summary_status p.status_date {color: #333;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_action.on {display: none;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_action.secon_action.on {display: block;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_action.secon_action {border-top: 1px solid #ddd; display: flex; justify-content: center; align-items: center; background-color: #fff; }
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_action.secon_action button {padding: 10px 0; width: 100%;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_action.secon_action button span {position: relative; padding-right: 20px; font-size: 14px; color: #333; line-height: 24px; font-weight: 400;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_action.secon_action button span::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%) rotate(180deg); width: 16px; height: 16px; background: url('../images/mypage/ico16_line_right_filled.svg') no-repeat center / contain;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_pv {padding: 16px 12px; border: 1px solid #ddd; border-radius: 8px;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_pv p {position: relative; padding-left: 16px; font-size: 14px; line-height: 24px; font-weight: 400; color: #555;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_pv p::before {content: ''; position: absolute; left: 4px; top: 10px; background-color: #555; border-radius: 50%; display: block; width: 4px; height: 4px;}
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_pv p time {font-size: 14px; line-height: 24px; }
 
 
 /* 참여 프로그램 관리 - 만족도 조사 (UI_ADHPAdS04) */
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group {padding: 16px 0;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group:first-child {padding-top: 0;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group:last-child {padding-bottom: 0;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group + .prog_group {border-top: 1px solid #eee;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group dt {display: flex; gap: 4px; margin-bottom: 12px;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group dt span {width: 24px; text-align: center; font-size: 16px; color: var(--col_blue); line-height: 24px; font-weight: 600;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group dt p {font-size: 16px; color: #333; line-height: 24px; font-weight: 600;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group dt .req_box p.req_txt {color: #ee2e62; font-weight: 400; font-size: 14px;} 
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group dd .label_text {font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.mypage .progmg.allcare .prog_qna_sec .prog_qna .prog_group dd li+li {margin-top: 12px;}
 
 
 /* 상담이력 - 목록 없음 (UI_ADHPAeM01) */
