--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* index링크 모바일 확인용 css (스크롤 안보이기) */
-/* ::-webkit-scrollbar {display: none;} */
+::-webkit-scrollbar {display: none;}
 
 
 
@@ -272,13 +272,7 @@
 .mypage .progmg.allcare .newpop_pv .newpop_inner .notice_wrap ul li::before {content: ''; position: absolute; left: 4px; top: 10px; background-color: #333; width: 4px; height: 4px; border-radius: 50%;}
 .mypage .progmg.allcare .newpop_pv .newpop_inner .confirm_desc {margin: 24px 0 176px;}
 .mypage .progmg.allcare .newpop_pv .newpop_inner .confirm_desc p {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
-
 .mypage .progmg.allcare .newpop_pv .newpop_inner .btn_wrap {width: 100%; padding: 24px 20px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); background-color: #fff;}
-
-
-
-
-
 
 
 
