--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -218,6 +218,9 @@
 .mypage .progmg.allcare .newpop_uni_search .newpop_inner .new_radio_item {display: flex; justify-content: center; align-items: center; position: relative;}
 .mypage .progmg.allcare .newpop_uni_search .newpop_save {display: flex; justify-content: center;}
 .mypage .progmg.allcare .newpop_uni_search .newpop_save button + button {margin-left: 16px;}
+.mypage .progmg.allcare .newpop_uni_search .new_table.radio_table .single_radio_item {display: flex; justify-content: center; align-items: center;}
+.mypage .progmg.allcare .newpop_uni_search .new_table.radio_table .single_radio_item input[type="radio"] {display: block; margin: 0; width: 22px; height: 22px; background-color: #fff; border: 1px solid #757575; border-radius: 50%; position: relative; appearance: none; -webkit-appearance: none; -moz-appearance: none;}
+.mypage .progmg.allcare .newpop_uni_search .new_table.radio_table .single_radio_item input[type="radio"]:checked::after {content: ""; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; border: 5px solid var(--col_blue); border-radius: 50%;}
 
 
 /* [팝업] 전공찾기팝업 - 조회/선택/등록 (UI_ADHPAbP07) */
