--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* index링크 모바일 확인용 css (스크롤 안보이기) */
-::-webkit-scrollbar {display: none;}
+/* ::-webkit-scrollbar {display: none;} */
 
 
 
@@ -19,14 +19,14 @@
 
 .allcare .radio_filed {border: none;}
 .allcare .radio_filed .new_radio_item + .new_radio_item {margin-top: 12px;}
-.allcare .radio_filed .new_radio_item input[type="radio"] {position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0; overflow: hidden; clip: rect(0 0 0 0); clip-path: inset(100%); border: 0;}
-.allcare .radio_filed .new_radio_item label {height: auto; display: flex; align-items: center; cursor: pointer; position: relative;}
-.allcare .radio_filed .new_radio_item label .radio_ui {position: absolute; left: 0; top: 0; display: block; margin: 0; width: 22px; height: 22px; border: 1px solid #757575; border-radius: 50%;}
-.allcare .radio_filed .new_radio_item input[type="radio"]:checked + label .radio_ui::after {content: ""; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; border: 5px solid var(--col_blue); border-radius: 50%;}
+.allcare .radio_filed .new_radio_item input[type="radio"] {appearance: none; -webkit-appearance: none; -moz-appearance: none; display: block; margin: 0; width: 22px; height: 22px; border: 1px solid #757575; border-radius: 50%;}
+.allcare .radio_filed .new_radio_item input[type="radio"]:checked {border: 5px solid var(--col_blue);}
 .allcare .radio_filed .new_radio_item label .label_text {margin-left: 27px; font-size: 16px; font-weight: 400; color: #333; line-height: 24px; }
 .allcare .radio_filed.radiof_type2 {display: flex;}
 .allcare .dimmed_pop {z-index: 299; width: 100%; height: 100%; display: block; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.16);}
 .allcare .dimmed_pop.dsp-none {display: none;}
+.allcare .newpop_endfixed {position: fixed; background-color: #fff; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; display: flex; gap: 8px; padding: 24px 20px;}
+
 
 .allcare .mt80 {margin-top: 80px !important;}
 .allcare .mt40 {margin-top: 40px !important;}
@@ -236,6 +236,17 @@
 
 
 /* [팝업] 전공찾기팝업 - 조회/선택/등록 (UI_ADHPAbP09) */
+.mypage .progmg.allcare .newpop_regi .full_box {padding: 0;}
+.mypage .progmg.allcare .newpop_regi .newpop_inner .search_area {gap: 8px; margin: 0;}
+.mypage .progmg.allcare .newpop_regi .newpop_inner .search_area input[type=text] {width: 100%;}
+.mypage .progmg.allcare .newpop_regi .newpop_inner .search_area button {margin: 0;}
+.mypage .progmg.allcare .newpop_regi .major_result_box {margin-top: 24px; padding: 0 20px 150px; overflow: hidden;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_tit {margin-bottom: 8px;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_tit p {color: #555;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list {border: 1px solid #ddd; border-radius: 12px; padding: 16px 8px 16px 16px; overflow: hidden;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list .radio_filed {max-height: 360px; height: 100%; overflow-y: auto; padding-right: 8px;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list .radio_filed .new_radio_item {display: flex; gap: 8px;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list .radio_filed .new_radio_item label {flex: 1;}
 
 
 /* [팝업] 개인정보 수집·이용·제공에 대한 동의서(참여자용) (UI_ADHPAbP10) */
