--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -227,6 +227,37 @@
 /* 참여신청서 - 회수(수정) (UI_ADHPAbS05) */
 
 /* [팝업] 운영 대학 검색 팝업 (UI_ADHPAbP06) */
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area {padding: 0 20px 148px;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_header .select_area .flex_box button {border: none; padding: 0 0 0 1.5rem;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_filed ul li {padding: 16px 0; border-bottom: 1px solid #ddd;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_filed ul li .radio_list_uni {display: flex; gap: 8px;  align-items: center;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_filed ul li .radio_list_uni label P {font-size: 18px; color: #111; font-weight: 600; line-height: 28px;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_filed ul li .radio_list_addr {margin: 8px 0 4px;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_filed ul li .radio_list_addr p {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
+.mypage .progmg.allcare .newpop_uni_search .list_cont_area .board_list .radio_filed ul li .radio_list_tel p {font-size: 14px; color: #555; font-weight: 400; line-height: 24px;}
+
+.mypage .progmg.allcare .newpop_uni_searchpop form.search_form {background-color: initial; padding-bottom: 200px;}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop_dimmed {z-index: 1000; width: 100%; height: 100%; display: block; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.16);}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop {padding: 32px 20px 40px; z-index: 1001; position: absolute; width: 100%; left: 50%; transform: translateX(-50%); bottom: 0; background-color: #fff; border-radius: 24px 24px 0 0;}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop .tit_box {margin-bottom: 16px; display: flex; align-items: center; justify-content: space-between;}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop .tit_box p {font-size: 18px; color: #333; line-height: 28px; font-weight: 600;}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop .tit_box button {width: 24px; height: 24px; display: block; background: url('../include/images/ico24_ui_close.svg') no-repeat center / contain;}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop .box_chk-group {margin-bottom: 24px; display: grid; grid-template-columns: repeat(3,1fr); gap: 8px 24px;}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop .box_chk-group span {display: flex; gap: 6px; align-items: center; }
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop .box_chk-group span input {margin: 0;}
+.mypage .progmg.allcare .newpop_uni_searchpop .region_veiwpop .box_chk-group span label {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
+
+.mypage .progmg.allcare .newpop_criteria {padding: initial; flex-direction: column;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box {background-color: #f8f8f8; padding: 16px 0 8px 24px;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box p.count_txt {font-size: 14px; color: #333; font-weight: 600; line-height: 24px;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box p.count_txt .count {font-size: 14px; color: var(--col_blue); font-weight: 600; line-height: 24px;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box .criteria_list {margin-top: 8px; width: 100%;  display: flex; gap: 8px; white-space: nowrap; overflow-x: auto;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box .criteria_list li {margin-bottom: 8px; background-color: #fff; border: 1px solid #757575; border-radius: 9999px; padding: 6px 12px;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box .criteria_list li:last-child {margin-right: 24px;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box .criteria_list li p {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
+.mypage .progmg.allcare .newpop_criteria .criteria_box .criteria_list li p .listitem_closebtn {margin-left: 4px; padding: 3px 0; width: 16px; height: 16px; display: inline-block; background: url('../include/images/ico16_close.svg') no-repeat center / contain;}
+.mypage .progmg.allcare .newpop_criteria .btn_box {background-color: #fff; padding: 24px 20px; display: flex; gap: 8px;}
+
 
 
 /* [팝업] 전공찾기팝업 - 조회/선택/등록 (UI_ADHPAbP07) */
@@ -243,8 +274,8 @@
 .mypage .progmg.allcare .newpop_regi .major_result_box {margin-top: 24px; padding: 0 20px 150px; overflow: hidden;}
 .mypage .progmg.allcare .newpop_regi .major_result_box .major_result_tit {margin-bottom: 8px;}
 .mypage .progmg.allcare .newpop_regi .major_result_box .major_result_tit p {color: #555;}
-.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list {border: 1px solid #ddd; border-radius: 12px; padding: 16px 8px 16px 16px; overflow: hidden;}
-.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list .radio_filed {max-height: 360px; height: 100%; overflow-y: auto; padding-right: 8px;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list {border: 1px solid #ddd; border-radius: 12px; padding: 16px 8px 16px 16px; overflow: hidden; height: 360px;}
+.mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list .radio_filed {height: 100%; overflow-y: auto; padding-right: 8px;}
 .mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list .radio_filed .new_radio_item {display: flex; gap: 8px;}
 .mypage .progmg.allcare .newpop_regi .major_result_box .major_result_list .radio_filed .new_radio_item label {flex: 1;}
 
