--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -258,9 +258,33 @@
 
 
 /* [팝업] 전공찾기팝업 - 조회/선택/등록 (UI_ADHPAbP07) */
+.mypage .progmg.allcare .newpop_major .newpop_inner .search_area.categroy_search input[type=text] {font-size: 16px; color: #757575; font-weight: 400; line-height: 28px; padding: 10px 16px; width: calc(100% - 56px); height: 48px;}
+.mypage .progmg.allcare .newpop_major .newpop_inner .categroy_search.search_area button {background-color: #fff; width: 60px; height: 48px; max-width: initial;}
+.mypage .progmg.allcare .newpop_major .newpop_inner .categroy_inner {padding: 0 20px 24px;}
+.mypage .progmg.allcare .newpop_major .category_lv + .category_lv {margin-top: 24px;}
+.mypage .progmg.allcare .newpop_major .category_tit {margin-bottom: 8px; font-size: 14px; color: #555; font-weight: 600; line-height: 24px;}
+.mypage .progmg.allcare .newpop_major .category_placeholder {cursor: pointer; height: 48px; padding: 10px 16px; border: 1px solid #757575; border-radius: 4px; }
+.mypage .progmg.allcare .newpop_major .category_placeholder_txt {position: relative; font-size: 16px; color: #757575; font-weight: 400; line-height: 28px;}
+.mypage .progmg.allcare .newpop_major .category_placeholder_txt.fix_text {color: #555;}
+.mypage .progmg.allcare .newpop_major .category_placeholder_txt::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); width: 16px; height: 16px; background: url('../include/images/arrow16_down.svg');}
+.mypage .progmg.allcare .newpop_major .category_lv_dimmed {z-index: 1000; width: 100%; height: 100%; display: block; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.16);}
+.mypage .progmg.allcare .newpop_major .category_list_flot {z-index: 1001; width: 320px; display: block; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%);}
+.mypage .progmg.allcare .newpop_major .category_list_flot ul {background-color: #fff; border-radius: 12px; max-height: 448px; width: 100%; height: 100%; overflow-y: auto;}
+.mypage .progmg.allcare .newpop_major .category_list_flot ul li+li {border-top: 1px solid #eee;}
+.mypage .progmg.allcare .newpop_major .category_list_flot ul li button {padding: 16px 10px; font-size: 16px; color: var(--col_blue); font-weight: 400; line-height: 24px; width: 100%; height: auto;} 
+.mypage .progmg.allcare .newpop_major .category_list_flotclose {margin-top: 8px; width: 100%; padding: 16px 10px; border-radius: 6px; background-color: #fff; font-size: 16px; color: #333; font-weight: 600; line-height: 24px;}
 
 
 /* [팝업] 전공찾기팝업 - 조회/선택/등록(계열분류) (UI_ADHPAbP08) */
+.mypage .progmg.allcare .newpop_major .category_lv.lv_view {padding-bottom: 120px;}
+.mypage .progmg.allcare .newpop_major .category_lv.lv_view .category_major_list ul {width: 100%; height: 300px; border-radius: 12px; border: 1px solid #ddd; padding: 16px; overflow-y: auto;}
+.mypage .progmg.allcare .newpop_major .category_lv.lv_view .category_major_list ul li + li {margin-top: 20px;}
+.mypage .progmg.allcare .newpop_major .category_lv.lv_view .category_major_list ul li .radio_list_major {display: flex; gap: 8px;}
+.mypage .progmg.allcare .newpop_major .category_lv.lv_view .category_major_list ul li .radio_list_major label {flex: 1;}
+.mypage .progmg.allcare .newpop_major .category_lv.lv_view .category_major_list ul li .radio_list_major label p {font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.mypage .progmg.allcare .newpop_major .category_lv.lv_view .category_major_list ul li .direct_input {margin-top: 8px; width: 100%; padding: 10px 16px; border: 1px solid #757575; border-radius: 4px; color: #757575; font-size: 16px; font-weight: 400; line-height: 28px;}
+
+
 
 
 /* [팝업] 전공찾기팝업 - 조회/선택/등록 (UI_ADHPAbP09) */
